# clipper-studio

./: .gitattributes  .gitignore  CLAUDE.md  README.md  contribute.md  development.md  index.html  package.json  pnpm-lock.yaml  vite.config.ts
.github/workflows/: ci.yml  release.yml
clipper-studio/: Cargo.toml  eslint.config.js  index.html  package.json  pnpm-lock.yaml  vite.config.ts
clipper-studio/crates/clipper-studio-plugin-core/: Cargo.toml
clipper-studio/crates/clipper-studio-plugin-core/src/: builtin.rs  error.rs  lib.rs  manifest.rs  transport.rs
clipper-studio/crates/clipper-studio-plugin-recorder/: Cargo.toml
clipper-studio/crates/clipper-studio-plugin-recorder/src/: lib.rs
clipper-studio/crates/clipper-studio-plugin-storage/: Cargo.toml
clipper-studio/crates/clipper-studio-plugin-storage/src/: lib.rs  mount.rs
clipper-studio/src/: App.tsx  index.css  main.tsx  routeTree.gen.ts
clipper-studio/src-tauri/: Cargo.toml  tauri.conf.json
clipper-studio/src-tauri/benches/: db_bench.rs  hash_bench.rs
clipper-studio/src-tauri/capabilities/: default.json
clipper-studio/src-tauri/icons/: icon.icns
clipper-studio/src-tauri/plugins/bilibili-recorder/: plugin.json
clipper-studio/src-tauri/src/: config.rs  lib.rs  main.rs
clipper-studio/src-tauri/src/asr/: docker.rs  local.rs  manager.rs  mod.rs  provider.rs  queue.rs  remote.rs  service.rs  splitter.rs
clipper-studio/src-tauri/src/commands/: asr.rs  clip.rs  danmaku.rs  deps.rs  media.rs  mod.rs  plugin.rs  system.rs  tag.rs  video.rs  workspace.rs
clipper-studio/src-tauri/src/core/: clipper.rs  danmaku.rs  media_server.rs  merger.rs  mod.rs  queue.rs  segment.rs  storage.rs  subtitle.rs  watcher.rs
clipper-studio/src-tauri/src/db/: mod.rs
clipper-studio/src-tauri/src/db/migration/: m20260405_000001_init.rs  m20260406_000002_asr_subtitles.rs  m20260407_000003_media_tasks.rs  m20260407_000004_clip_batch.rs  m20260408_000005_workspace_clip_output.rs  m20260416_000006_add_missing_indexes.rs  m20260417_000007_video_missing.rs  m20260417_000008_clip_task_burn_flags.rs  mod.rs
clipper-studio/src-tauri/src/plugin/: manager.rs  manifest.rs  mod.rs  registry.rs  service.rs  transport.rs
clipper-studio/src-tauri/src/shell/: tray.rs
clipper-studio/src-tauri/src/utils/: ffmpeg.rs  hash.rs  locks.rs  mod.rs  path.rs  secrets.rs  time.rs  validation.rs
clipper-studio/src-tauri/tests/: asr_commands_test.rs  asr_queue_test.rs  clip_commands_test.rs  danmaku_commands_test.rs  dashboard_stats_test.rs  db_crud_test.rs  db_migration_test.rs  deps_commands_test.rs  fts5_test.rs  media_commands_test.rs  media_server_test.rs  plugin_commands_test.rs  settings_commands_test.rs  system_commands_test.rs  tag_commands_test.rs  video_commands_test.rs  workspace_commands_test.rs
clipper-studio/src/components/onboarding/: AsrStep.tsx  DepsStep.tsx  WizardStepper.tsx  WorkspaceStep.tsx
clipper-studio/src/components/search/: global-search-dialog.tsx
clipper-studio/src/components/storage/: storage-manager.tsx
clipper-studio/src/components/tag/: tag-badge.tsx  tag-filter.tsx  tag-manager.tsx  tag-selector.tsx
clipper-studio/src/components/ui/: popover.tsx  progress.tsx  tooltip.tsx
clipper-studio/src/components/video/: date-range-picker.tsx  merge-toolbar.tsx  pagination-bar.tsx  streamer-card.tsx  video-row.tsx
clipper-studio/src/components/video-player/: clip-actions.tsx  clip-panel.tsx  clip-timeline.tsx  danmaku-layer.tsx  heatmap-bar.tsx  player.tsx  subtitle-panel.tsx
clipper-studio/src/components/workspace/: add-workspace-dialog.tsx  scan-progress-card.tsx  workspace-switcher.tsx
clipper-studio/src/lib/: clip-colors.ts  theme-presets.ts  video-utils.ts
clipper-studio/src/lib/__tests__/: clip-colors.test.ts  video-utils.test.ts
clipper-studio/src/routes/: __root.tsx  dashboard.tsx  index.tsx  welcome.tsx
clipper-studio/src/routes/dashboard/: asr.tsx  index.tsx  plugins.tsx  settings.tsx  tasks.tsx  videos.tsx  workspaces.tsx
clipper-studio/src/routes/dashboard/plugins/: $pluginId.tsx  index.tsx
clipper-studio/src/routes/dashboard/videos/: $videoId.tsx  index.tsx
clipper-studio/src/routes/dashboard/videos/streamer/: $streamerId.tsx
clipper-studio/src/services/: asr.ts  clip.ts  danmaku.ts  dashboard.ts  deps.ts  media.ts  plugin.ts  settings.ts  system.ts  tag.ts  video.ts  workspace.ts
clipper-studio/src/stores/: asr-health.ts  asr-queue.ts  theme.ts  workspace.ts
clipper-studio/src/types/: clip.ts  deps.ts  multi-clip.ts  tag.ts  video.ts  workspace.ts
docs/: danmaku.md  faq.md  getting-started.md  index.md  installation.md  package.json  plugins.md  settings.md  subtitle.md  video-workbench.md  workspace.md
docs/.vitepress/: config.mts
src-tauri/src/: lib.rs
src-tauri/src/commands/: mod.rs  system.rs
src-tauri/src/core/: mod.rs
src-tauri/src/db/migration/: m20260405_000001_init.rs
src-tauri/src/db/models/: mod.rs
src-tauri/src/utils/: ffmpeg.rs
