[workspace]
resolver = "2"
members = [
    "src-tauri",
    "crates/clipper-studio-plugin-core",
    "crates/clipper-studio-plugin-recorder",
]
exclude = ["plugins/*"]

[workspace.package]
version = "0.1.0"
edition = "2021"
authors = ["LanceLRQ"]
license = "GPL-3.0"
rust-version = "1.77"

[workspace.dependencies]
# Serialization
serde = { version = "1", features = ["derive"] }
serde_json = "1"

# Async runtime
tokio = { version = "1", features = ["full"] }

# Error handling
thiserror = "2"
anyhow = "1"

# HTTP client
reqwest = { version = "0.12", features = ["json", "multipart"] }

# Async trait
async-trait = "0.1"

# Logging
tracing = "0.1"
