[package]
name = "clipper-studio-plugin-core"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
rust-version.workspace = true

[dependencies]
serde.workspace = true
serde_json.workspace = true
tokio.workspace = true
thiserror.workspace = true
reqwest.workspace = true
async-trait.workspace = true
tracing.workspace = true
