[package]
name = "clipper-studio-plugin-recorder"
version = "0.1.0"
edition = "2021"
description = "Builtin BilibiliRecorder plugin for ClipperStudio"

[dependencies]
clipper-studio-plugin-core = { path = "../clipper-studio-plugin-core" }
async-trait = "0.1"
reqwest = { version = "0.12", features = ["json"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
thiserror = "2"
tokio = { version = "1", features = ["full"] }
tracing = "0.1"

[features]
default = []
