[package]
name = "clipper-studio-plugin-storage"
version = "0.1.0"
edition = "2021"
description = "Builtin storage-provider plugin for SMB/CIFS network mounts"

[dependencies]
clipper-studio-plugin-core = { path = "../clipper-studio-plugin-core" }
async-trait = "0.1"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
thiserror = "2"
tokio = { version = "1", features = ["full"] }
tracing = "0.1"

[features]
default = []
